Add source for jdk_1.2.1_004