@@ -1,41 +1,45 @@
 /*
- * @(#)Integer.java	1.44 01/12/10
+ * @(#)Integer.java	1.54 98/08/26
  *
- * Copyright 2002 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ * Copyright 1994-1998 by Sun Microsystems, Inc.,
+ * 901 San Antonio Road, Palo Alto, California, 94303, U.S.A.
+ * All rights reserved.
+ *
+ * This software is the confidential and proprietary information
+ * of Sun Microsystems, Inc. ("Confidential Information").  You
+ * shall not disclose such Confidential Information and shall use
+ * it only in accordance with the terms of the license agreement
+ * you entered into with Sun.
  */
 
 package java.lang;
 
 /**
- * The Integer class wraps a value of the primitive type <code>int</code> 
- * in an object. An object of type <code>Integer</code> contains a 
- * single field whose type is <code>int</code>. 
+ * The Integer class wraps a value of the primitive type <code>int</code>
+ * in an object. An object of type <code>Integer</code> contains a
+ * single field whose type is <code>int</code>.
  * <p>
- * In addition, this class provides several methods for converting 
- * an <code>int</code> to a <code>String</code> and a 
- * <code>String</code> to an <code>int</code>, as well as other 
- * constants and methods useful when dealing with an 
- * <code>int</code>. 
+ * In addition, this class provides several methods for converting
+ * an <code>int</code> to a <code>String</code> and a
+ * <code>String</code> to an <code>int</code>, as well as other
+ * constants and methods useful when dealing with an
+ * <code>int</code>.
  *
  * @author  Lee Boynton
  * @author  Arthur van Hoff
- * @version 1.44, 12/10/01
+ * @version 1.54, 08/26/98
  * @since   JDK1.0
  */
-public final
-class Integer extends Number {
+public final class Integer extends Number implements Comparable {
     /**
-     * The smallest value of type <code>int</code>. 
-     *
-     * @since   JDK1.0
+     * The smallest value of type <code>int</code>. The constant 
+     * value of this field is <tt>-2147483648</tt>.
      */
     public static final int   MIN_VALUE = 0x80000000;
 
     /**
-     * The largest value of type <code>int</code>. 
-     *
-     * @since   JDK1.0
+     * The largest value of type <code>int</code>. The constant 
+     * value of this field is <tt>2147483647</tt>.
      */
     public static final int   MAX_VALUE = 0x7fffffff;
 
@@ -47,93 +51,110 @@ class Integer extends Number {
     public static final Class	TYPE = Class.getPrimitiveClass("int");
 
     /**
-     * All possible chars for representing a number as a String 
+     * All possible chars for representing a number as a String
      */
-    final static char[] digits = { 
-	'0' , '1' , '2' , '3' , '4' , '5' , 
-	'6' , '7' , '8' , '9' , 'a' , 'b' , 
-	'c' , 'd' , 'e' , 'f' , 'g' , 'h' , 
-	'i' , 'j' , 'k' , 'l' , 'm' , 'n' , 
-	'o' , 'p' , 'q' , 'r' , 's' , 't' , 
-	'u' , 'v' , 'w' , 'x' , 'y' , 'z' 
+    final static char[] digits = {
+	'0' , '1' , '2' , '3' , '4' , '5' ,
+	'6' , '7' , '8' , '9' , 'a' , 'b' ,
+	'c' , 'd' , 'e' , 'f' , 'g' , 'h' ,
+	'i' , 'j' , 'k' , 'l' , 'm' , 'n' ,
+	'o' , 'p' , 'q' , 'r' , 's' , 't' ,
+	'u' , 'v' , 'w' , 'x' , 'y' , 'z'
     };
-    
+
     /**
-     * Array of chars to lookup the char for the digit in the tenth's 
-     * place for a two digit, base ten number.  The char can be got by 
+     * Array of chars to lookup the char for the digit in the tenth's
+     * place for a two digit, base ten number.  The char can be got by
      * using the number as the index.
      */
     private final static char[] radixTenTenths = {
-	'0', '0', '0', '0', '0', '0', '0', '0', '0', '0', 
-	'1', '1', '1', '1', '1', '1', '1', '1', '1', '1', 
-	'2', '2', '2', '2', '2', '2', '2', '2', '2', '2', 
-	'3', '3', '3', '3', '3', '3', '3', '3', '3', '3', 
-	'4', '4', '4', '4', '4', '4', '4', '4', '4', '4', 
-	'5', '5', '5', '5', '5', '5', '5', '5', '5', '5', 
-	'6', '6', '6', '6', '6', '6', '6', '6', '6', '6', 
-	'7', '7', '7', '7', '7', '7', '7', '7', '7', '7', 
-	'8', '8', '8', '8', '8', '8', '8', '8', '8', '8', 
+	'0', '0', '0', '0', '0', '0', '0', '0', '0', '0',
+	'1', '1', '1', '1', '1', '1', '1', '1', '1', '1',
+	'2', '2', '2', '2', '2', '2', '2', '2', '2', '2',
+	'3', '3', '3', '3', '3', '3', '3', '3', '3', '3',
+	'4', '4', '4', '4', '4', '4', '4', '4', '4', '4',
+	'5', '5', '5', '5', '5', '5', '5', '5', '5', '5',
+	'6', '6', '6', '6', '6', '6', '6', '6', '6', '6',
+	'7', '7', '7', '7', '7', '7', '7', '7', '7', '7',
+	'8', '8', '8', '8', '8', '8', '8', '8', '8', '8',
 	'9', '9', '9', '9', '9', '9', '9', '9', '9', '9'
     };
-    
     /**
-     * Array of chars to lookup the char for the digit in the unit's 
-     * place for a two digit, base ten number.  The char can be got by 
+     * Array of chars to lookup the char for the digit in the unit's
+     * place for a two digit, base ten number.  The char can be got by
      * using the number as the index.
      */
     private final static char[] radixTenUnits = {
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
-	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
+	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9',
 	'0', '1', '2', '3', '4', '5', '6', '7', '8', '9'
     };
 
     /**
-     * Creates a string representation of the first argument in the 
-     * radix specified by the second argument. 
+     * Creates a string representation of the first argument in the
+     * radix specified by the second argument.
      * <p>
-     * If the radix is smaller than <code>Character.MIN_RADIX</code> or 
-     * larger than <code>Character.MAX_RADIX</code>, then the radix 
-     * <code>10</code> is used instead. 
+     * If the radix is smaller than <code>Character.MIN_RADIX</code> or
+     * larger than <code>Character.MAX_RADIX</code>, then the radix
+     * <code>10</code> is used instead.
      * <p>
      * If the first argument is negative, the first element of the 
-     * result is the ASCII minus character <code>'-'</code>. If the first 
+     * result is the ASCII minus character <code>'-'</code> 
+     * (<tt>'&#92;u002d'</tt>). If the first 
      * argument is not negative, no sign character appears in the result. 
+     * <p>
+     * The remaining characters of the result represent the magnitude of 
+     * the first argument. If the magnitude is zero, it is represented by 
+     * a single zero character <tt>'0'</tt> (<tt>'&#92;u0030'</tt>); otherwise, 
+     * the first character of the representation of the magnitude will 
+     * not be the zero character. 
      * The following ASCII characters are used as digits: 
-     * <ul><code>
+     * <blockquote><pre>
      *   0123456789abcdefghijklmnopqrstuvwxyz
-     * </code></ul>
+     * </pre></blockquote>
+     * These are <tt>'&#92;u0030'</tt> through <tt>'&#92;u0039'</tt> and 
+     * <tt>'&#92;u0061'</tt> through <tt>'&#92;u007a'</tt>. If the 
+     * <tt>radix</tt> is <var>N</var>, then the first <var>N</var> of these 
+     * characters are used as radix-<var>N</var> digets in the order shown. 
+     * Thus, the digits for hexadecimal (radix 16) are 
+     * <tt>0123456789abcdef</tt>. If uppercase letters are desired, the 
+     * {@link java.lang.String#toUpperCase()} method 
+     * may be called on the result:
+     * <blockquote><pre>
+     * Integer.toString(n, 16).toUpperCase()
+     * </pre></blockquote>
      *
      * @param   i       an integer.
      * @param   radix   the radix.
      * @return  a string representation of the argument in the specified radix.
      * @see     java.lang.Character#MAX_RADIX
      * @see     java.lang.Character#MIN_RADIX
-     * @since   JDK1.0
      */
     public static String toString(int i, int radix) {
-	if (radix < Character.MIN_RADIX || radix > Character.MAX_RADIX)
+
+        if (radix < Character.MIN_RADIX || radix > Character.MAX_RADIX)
 	    radix = 10;
-	
+
 	/* Use the faster version */
 	if (radix == 10) {
 	    return toString(i);
 	}
-	
+
 	char buf[] = new char[33];
 	boolean negative = (i < 0);
 	int charPos = 32;
-		
+
 	if (!negative) {
 	    i = -i;
 	}
-		    
+
 	while (i <= -radix) {
 	    buf[charPos--] = digits[-(i % radix)];
 	    i = i / radix;
@@ -147,14 +168,30 @@ class Integer extends Number {
 	return new String(buf, charPos, (33 - charPos));
     }
 
+
     /**
-     * Creates a string representation of the integer argument as an 
-     * unsigned integer in base&nbsp;16. 
+     * Creates a string representation of the integer argument as an
+     * unsigned integer in base&nbsp;16.
      * <p>
      * The unsigned integer value is the argument plus 2<sup>32</sup> if 
      * the argument is negative; otherwise, it is equal to the argument. 
      * This value is converted to a string of ASCII digits in hexadecimal 
-     * (base&nbsp;16) with no extra leading <code>0</code>s. 
+     * (base&nbsp;16) with no extra leading <code>0</code>s. If the 
+     * unsigned magnitude is zero, it is represented by a single zero 
+     * character <tt>'0'</tt> (<tt>'&#92;u0030'</tt>); otherwise, the first 
+     * character of the representation of the unsigned magnitude will 
+     * not be the zero character. The following characters are used as 
+     * hexadecimal digits:
+     * <blockquote><pre>
+     * 0123456789abcdef
+     * </pre></blockquote>
+     * These are the characters <tt>'&#92;u0030'</tt> through <tt>'&#92;u0039'</tt> 
+     * and <tt>'u\0039'</tt> through <tt>'&#92;u0066'</tt>. If the uppercase 
+     * letters are desired, the {@link java.lang.String#toUpperCase()} 
+     * method may be called on the result:
+     * <blockquote><pre>
+     * Long.toHexString(n).toUpperCase()
+     * </pre></blockquote>
      *
      * @param   i   an integer.
      * @return  the string representation of the unsigned integer value
@@ -166,17 +203,26 @@ class Integer extends Number {
     }
 
     /**
-     * Creates a string representation of the integer argument as an 
-     * unsigned integer in base 8. 
+     * Creates a string representation of the integer argument as an
+     * unsigned integer in base 8.
      * <p>
      * The unsigned integer value is the argument plus 2<sup>32</sup> if 
      * the argument is negative; otherwise, it is equal to the argument. 
      * This value is converted to a string of ASCII digits in octal 
      * (base&nbsp;8) with no extra leading <code>0</code>s. 
+     * <p>
+     * If the unsigned magnitude is zero, it is represented by a single 
+     * zero character <tt>'0'</tt> (<tt>'&#92;u0030'</tt>); otherwise, the 
+     * first character of the representation of the unsigned magnitude will 
+     * not be the zero character. The octal digits are:
+     * <blockquote><pre>
+     * 01234567
+     * </pre></blockquote>
+     * These are the characters <tt>'&#92;u0030'</tt> through <tt>'&#92;u0037'</tt>. 
      *
      * @param   i   an integer
      * @return  the string representation of the unsigned integer value
-     *          represented by the argument in octal (base&mnsp;8).
+     *          represented by the argument in octal (base&nbsp;8).
      * @since   JDK1.0.2
      */
     public static String toOctalString(int i) {
@@ -184,13 +230,20 @@ class Integer extends Number {
     }
 
     /**
-     * Creates a string representation of the integer argument as an 
-     * unsigned integer in base&nbsp;2. 
+     * Creates a string representation of the integer argument as an
+     * unsigned integer in base&nbsp;2.
      * <p>
      * The unsigned integer value is the argument plus 2<sup>32</sup>if 
      * the argument is negative; otherwise it is equal to the argument. 
      * This value is converted to a string of ASCII digits in binary 
      * (base&nbsp;2) with no extra leading <code>0</code>s. 
+     * 
+     * If the unsigned magnitude is zero, it is represented by a single 
+     * zero character <tt>'0'</tt> (<tt>'&#92;u0030'</tt>); otherwise, the 
+     * first character of the representation of the unsigned magnitude 
+     * will not be the zero character. The characters <tt>'0'</tt> 
+     * (<tt>'&#92;u0030'</tt>) and <tt>'1'</tt> (<tt>'&#92;u0031'</tt>) are used 
+     * as binary digits.
      *
      * @param   i   an integer.
      * @return  the string representation of the unsigned integer value
@@ -201,7 +254,7 @@ class Integer extends Number {
 	return toUnsignedString(i, 1);
     }
 
-    /** 
+    /**
      * Convert the integer to an unsigned number.
      */
     private static String toUnsignedString(int i, int shift) {
@@ -213,23 +266,24 @@ class Integer extends Number {
 	    buf[--charPos] = digits[i & mask];
 	    i >>>= shift;
 	} while (i != 0);
-	
+
 	return new String(buf, charPos, (32 - charPos));
     }
 
     /**
-     * Returns a new String object representing the specified integer. The radix
-     * is assumed to be 10.
+     * Returns a new String object representing the specified integer. The 
+     * argument is converted to signed decimal representation and returned 
+     * as a string, exactly as if the argument and radix <tt>10</tt> were 
+     * given as arguments to the {@link #toString(int, int)} method.
      *
      * @param   i   an integer to be converted.
      * @return  a string representation of the argument in base&nbsp;10.
-     * @since   JDK1.0
      */
     public static String toString(int i) {
-	/** 
+	/**
 	 * Performance improvements -
 	 *
-	 * 1) Avoid a method call and radix checks by inlining the code for 
+	 * 1) Avoid a method call and radix checks by inlining the code for
 	 *    radix = 10 in this method.
 	 * 2) Use char arrays instead of StringBuffer and avoid calls to
 	 *    Character.forDigit.
@@ -237,48 +291,76 @@ class Integer extends Number {
 	 *    around the loop.
 	 * 4) Unroll loop by half and use a static array of chars to look-
 	 *    up chars for a digit.
-	 * The other option for 4) was to use a switch statement and assign 
+	 * The other option for 4) was to use a switch statement and assign
 	 * the char for the current digit.  That was a little slower than 4)
-	 * with most jits. 
+	 * with most jits.
 	 * Speed-up = (approximately) 4x on both Solaris and Win32.
 	 */
 	char[] buf = new char[12];
 	boolean negative = (i < 0);
 	int charPos = 12;
-	
+
 	if (i == Integer.MIN_VALUE) {
 	    return "-2147483648";
 	}
-		
+
 	if (negative) {
 	    i = -i;
 	}
-	
+
 	do {
 	    int digit = i%100;
 	    buf[--charPos] = radixTenUnits[digit];
 	    buf[--charPos] = radixTenTenths[digit];
 	    i = i / 100;
 	} while(i != 0);
-	
+
 	if (buf[charPos] == '0') {
 	    charPos++;
 	}
 	if (negative) {
 	    buf[--charPos] = '-';
 	}
-		
+
 	return new String(buf , charPos , (12 - charPos));
     }
-    
+
     /**
      * Parses the string argument as a signed integer in the radix 
      * specified by the second argument. The characters in the string 
      * must all be digits of the specified radix (as determined by 
-     * whether <code>Character.digit</code> returns a 
+     * whether {@link java.lang.Character#digit(char, int)} returns a 
      * nonnegative value), except that the first character may be an 
-     * ASCII minus sign <code>'-'</code> to indicate a negative value. 
-     * The resulting integer value is returned. 
+     * ASCII minus sign <code>'-'</code> (<code>'&#92;u002d'</code>) to 
+     * indicate a negative value. The resulting integer value is returned. 
+     * <p>
+     * An exception of type <tt>NumberFormatException</tt> is thrown if any 
+     * of the following situations occurs:
+     * <ul>
+     * <li>The first argument is <tt>null</tt> or is a string of length zero. 
+     * <li>The radix is either smaller than 
+     * {@link java.lang.Character#MIN_RADIX} or
+     * larger than {@link java.lang.Character#MAX_RADIX}. 
+     * <li>Any character of the string is not a digit of the specified radix,
+     * except that the first character may be a minus sign <tt>'-'</tt> 
+     * (<tt>'&#92;u002d'</tt>) provided that the string is longer than length 1. 
+     * <li>The integer value represented by the string is not a value of type
+     * <tt>int</tt>. 
+     * </ul><p>
+     * Examples:
+     * <blockquote><pre>
+     * parseInt("0", 10) returns 0
+     * parseInt("473", 10) returns 473
+     * parseInt("-0", 10) returns 0
+     * parseInt("-FF", 16) returns -255
+     * parseInt("1100110", 2) returns 102
+     * parseInt("2147483647", 10) returns 2147483647
+     * parseInt("-2147483648", 10) returns -2147483648
+     * parseInt("2147483648", 10) throws a NumberFormatException
+     * parseInt("99", 8) throws a NumberFormatException
+     * parseInt("Kona", 10) throws a NumberFormatException
+     * parseInt("Kona", 27) returns 411787
+     * </pre></blockquote>
      *
      * @param      s   the <code>String</code> containing the integer.
      * @param      radix   the radix to be used.
@@ -287,25 +369,24 @@ class Integer extends Number {
      * @exception  NumberFormatException  if the string does not contain a
      *               parsable integer.
 
-     * @since      JDK1.0
      */
-    public static int parseInt(String s, int radix) 
-		throws NumberFormatException 
+    public static int parseInt(String s, int radix)
+		throws NumberFormatException
     {
         if (s == null) {
             throw new NumberFormatException("null");
         }
 
 	if (radix < Character.MIN_RADIX) {
-	    throw new NumberFormatException("radix " + radix + 
+	    throw new NumberFormatException("radix " + radix +
 					    " less than Character.MIN_RADIX");
 	}
-	
+
 	if (radix > Character.MAX_RADIX) {
-	    throw new NumberFormatException("radix " + radix + 
+	    throw new NumberFormatException("radix " + radix +
 					    " greater than Character.MAX_RADIX");
 	}
-	    
+
 	int result = 0;
 	boolean negative = false;
 	int i = 0, max = s.length();
@@ -362,14 +443,16 @@ class Integer extends Number {
     /**
      * Parses the string argument as a signed decimal integer. The 
      * characters in the string must all be decimal digits, except that 
-     * the first character may be an ASCII minus sign <code>'-'</code> to 
-     * indicate a negative value. 
+     * the first character may be an ASCII minus sign <code>'-'</code> 
+     * (<tt>'&#92;u002d'</tt>) to indicate a negative value. The resulting 
+     * integer value is returned, exactly as if the argument and the radix 
+     * 10 were given as arguments to the 
+     * {@link #parseInt(java.lang.String, int)} method.
      *
      * @param      s   a string.
      * @return     the integer represented by the argument in decimal.
      * @exception  NumberFormatException  if the string does not contain a
      *               parsable integer.
-     * @since      JDK1.0
      */
     public static int parseInt(String s) throws NumberFormatException {
 	return parseInt(s,10);
@@ -377,16 +460,27 @@ class Integer extends Number {
 
     /**
      * Returns a new Integer object initialized to the value of the
-     * specified String.  Throws an exception if the String cannot be
-     * parsed as an int.
+     * specified String. The first argument is interpreted as representing 
+     * a signed integer in the radix specified by the second argument, 
+     * exactly as if the arguments were given to the 
+     * {@link #parseInt(java.lang.String, int)} method. The result is an 
+     * <code>Integer</code> object that represents the integer value 
+     * specified by the string. 
+     * <p>
+     * In other words, this method returns an <code>Integer</code> object 
+     * equal to the value of:
+     * <blockquote><pre>
+     * new Integer(Integer.parseInt(s, radix))  
+     * </pre></blockquote>
      *
      * @param      s   the string to be parsed.
+     * @param      radix the radix of the integer represented by string 
+     *             <tt>s</tt>
      * @return     a newly constructed <code>Integer</code> initialized to the
      *             value represented by the string argument in the specified
      *             radix.
-     * @exception  NumberFormatException  if the <code>String</code> does not
-     *               contain a parsable integer.
-     * @since   JDK1.0
+     * @exception  NumberFormatException  if the String cannot be 
+     *             parsed as an <code>int</code>.
      */
     public static Integer valueOf(String s, int radix) throws NumberFormatException {
 	return new Integer(parseInt(s,radix));
@@ -394,15 +488,23 @@ class Integer extends Number {
 
     /**
      * Returns a new Integer object initialized to the value of the
-     * specified String.  Throws an exception if the String cannot be
-     * parsed as an int. The radix is assumed to be 10.
+     * specified String. The argument is interpreted as representing a 
+     * signed decimal integer, exactly as if the argument were given to 
+     * the {@link #parseInt(java.lang.String)} method. The result is an 
+     * <tt>Integer</tt> object that represents the integer value specified 
+     * by the string. 
+     * <p>
+     * In other words, this method returns an <tt>Integer</tt> object equal 
+     * to the value of:
+     * <blockquote><pre>
+     * new Integer(Integer.parseInt(s)) 
+     * </pre></blockquote>
      *
      * @param      s   the string to be parsed.
      * @return     a newly constructed <code>Integer</code> initialized to the
      *             value represented by the string argument.
-     * @exception  NumberFormatException  if the string does not contain a
-     *               parsable integer.
-     * @since   JDK1.0
+     * @exception  NumberFormatException  if the string cannot be parsed 
+     *             as an integer.
      */
     public static Integer valueOf(String s) throws NumberFormatException
     {
@@ -411,15 +513,16 @@ class Integer extends Number {
 
     /**
      * The value of the Integer.
+     *
+     * @serial
      */
     private int value;
 
     /**
-     * Constructs a newly allocated <code>Integer</code> object that 
-     * represents the primitive <code>int</code> argument. 
+     * Constructs a newly allocated <code>Integer</code> object that
+     * represents the primitive <code>int</code> argument.
      *
      * @param   value   the value to be represented by the <code>Integer</code>.
-     * @since   JDK1.0
      */
     public Integer(int value) {
 	this.value = value;
@@ -428,14 +531,14 @@ class Integer extends Number {
     /**
      * Constructs a newly allocated <code>Integer</code> object that 
      * represents the value represented by the string. The string is 
-     * converted to an int value as if by the <code>valueOf</code> method. 
+     * converted to an <tt>int</tt> in exactly the manner used by the 
+     * <tt>parseInt</tt> method for radix 10.
      *
      * @param      s   the <code>String</code> to be converted to an
      *                 <code>Integer</code>.
      * @exception  NumberFormatException  if the <code>String</code> does not
      *               contain a parsable integer.
-     * @see        java.lang.Integer#valueOf(java.lang.String, int)
-     * @since      JDK1.0
+     * @see        java.lang.Integer#parseInt(java.lang.String, int)
      */
     public Integer(String s) throws NumberFormatException {
 	this.value = parseInt(s, 10);
@@ -463,54 +566,52 @@ class Integer extends Number {
      * Returns the value of this Integer as an int.
      *
      * @return  the <code>int</code> value represented by this object.
-     * @since   JDK1.0
      */
     public int intValue() {
 	return value;
     }
 
     /**
-     * Returns the value of this Integer as a long.
+     * Returns the value of this Integer as a <tt>long</tt>.
      *
      * @return  the <code>int</code> value represented by this object that is
      *          converted to type <code>long</code> and the result of the
      *          conversion is returned.
-     * @since   JDK1.0
      */
     public long longValue() {
 	return (long)value;
     }
 
     /**
-     * Returns the value of this Integer as a float.
+     * Returns the value of this Integer as a <tt>float</tt>.
      *
      * @return  the <code>int</code> value represented by this object is
      *          converted to type <code>float</code> and the result of the
      *          conversion is returned.
-     * @since   JDK1.0
      */
     public float floatValue() {
 	return (float)value;
     }
 
     /**
-     * Returns the value of this Integer as a double.
+     * Returns the value of this Integer as a <tt>double</tt>.
      *
      * @return  the <code>int</code> value represented by this object is
      *          converted to type <code>double</code> and the result of the
      *          conversion is returned.
-     * @since   JDK1.0
      */
     public double doubleValue() {
 	return (double)value;
     }
 
     /**
-     * Returns a String object representing this Integer's value.
+     * Returns a String object representing this Integer's value. The 
+     * value is converted to signed decimal representation and returned 
+     * as a string, exactly as if the integer value were given as an 
+     * argument to the {@link java.lang.Integer#toString(int)} method.
      *
      * @return  a string representation of the value of this object in
      *          base&nbsp;10.
-     * @since   JDK1.0
      */
     public String toString() {
 	return String.valueOf(value);
@@ -519,8 +620,9 @@ class Integer extends Number {
     /**
      * Returns a hashcode for this Integer.
      *
-     * @return  a hash code value for this object. 
-     * @since   JDK1.0
+     * @return  a hash code value for this object, equal to the 
+     *          primitive <tt>int</tt> value represented by this 
+     *          <tt>Integer</tt> object. 
      */
     public int hashCode() {
 	return value;
@@ -528,14 +630,13 @@ class Integer extends Number {
 
     /**
      * Compares this object to the specified object.
-     * The result is <code>true</code> if and only if the argument is not 
-     * <code>null</code> and is an <code>Integer</code> object that contains 
-     * the same <code>int</code> value as this object. 
+     * The result is <code>true</code> if and only if the argument is not
+     * <code>null</code> and is an <code>Integer</code> object that contains
+     * the same <code>int</code> value as this object.
      *
      * @param   obj   the object to compare with.
      * @return  <code>true</code> if the objects are the same;
      *          <code>false</code> otherwise.
-     * @since   JDK1.0
      */
     public boolean equals(Object obj) {
 	if ((obj != null) && (obj instanceof Integer)) {
@@ -545,12 +646,12 @@ class Integer extends Number {
     }
 
     /**
-     * Determines the integer value of the system property with the 
-     * specified name. 
+     * Determines the integer value of the system property with the
+     * specified name.
      * <p>
      * The first argument is treated as the name of a system property. 
-     * System properties are accessible through <code>getProperty</code>  
-     * and , a method defined by the <code>System</code> class. The 
+     * System properties are accessible through the 
+     * {@link java.lang.System#getProperty(java.lang.String)} method. The 
      * string value of this property is then interpreted as an integer 
      * value and an <code>Integer</code> object representing this value is 
      * returned. Details of possible numeric formats can be found with 
@@ -558,28 +659,28 @@ class Integer extends Number {
      * <p>
      * If there is no property with the specified name, or if the 
      * property does not have the correct numeric format, then 
-     * <code>null</code> is returned. 
+     * <code>null</code> is returned.  In other words, this method returns 
+     * an <code>Integer</code> object equal to the value of:
+     * <blockquote><pre>
+     * getInteger(nm, null)
+     * </pre></blockquote>
      *
      * @param   nm   property name.
      * @return  the <code>Integer</code> value of the property.
      * @see     java.lang.System#getProperty(java.lang.String)
      * @see     java.lang.System#getProperty(java.lang.String, java.lang.String)
-     * @since   JDK1.0
      */
     public static Integer getInteger(String nm) {
-	SecurityManager sm = System.getSecurityManager();
-	if (sm != null)
-	    sm.checkPropertyAccess(nm);
 	return getInteger(nm, null);
     }
 
     /**
-     * Determines the integer value of the system property with the 
-     * specified name. 
+     * Determines the integer value of the system property with the
+     * specified name.
      * <p>
      * The first argument is treated as the name of a system property. 
-     * System properties are accessible through <code>getProperty</code>  
-     * and , a method defined by the <code>System</code> class. The 
+     * System properties are accessible through <code>getProperty</code>, 
+     * a method defined by the <code>System</code> class. The 
      * string value of this property is then interpreted as an integer 
      * value and an <code>Integer</code> object representing this value is 
      * returned. Details of possible numeric formats can be found with 
@@ -589,45 +690,53 @@ class Integer extends Number {
      * property does not have the correct numeric format, then an 
      * <code>Integer</code> object that represents the value of the 
      * second argument is returned. 
+     * <p>
+     * In other words, this method returns an <code>Integer</code> object 
+     * equal to the value of:
+     * <blockquote><pre>
+     * getInteger(nm, new Integer(val))
+     * </pre></blockquote>
+     * but in practice it may be implemented in a manner such as: 
+     * <blockquote><pre>
+     * Integer result = getInteger(nm, null);
+     * return (result == null) ? new Integer(val) : result;
+     * </pre></blockquote>
+     * to avoid the unnecessary allocation of an <code>Integer</code> 
+     * object when the default value is not needed. 
      *
      * @param   nm   property name.
      * @param   val   default value.
      * @return  the <code>Integer</code> value of the property.
      * @see     java.lang.System#getProperty(java.lang.String)
      * @see     java.lang.System#getProperty(java.lang.String, java.lang.String)
-     * @since   JDK1.0
      */
     public static Integer getInteger(String nm, int val) {
-	SecurityManager sm = System.getSecurityManager();
-	if (sm != null)
-	    sm.checkPropertyAccess(nm);
         Integer result = getInteger(nm, null);
         return (result == null) ? new Integer(val) : result;
     }
 
     /**
-     * Determines the integer value of the system property with the 
-     * specified name. 
+     * Returns the integer value of the system property with the specified
+     * name.  The first argument is treated as the name of a system property.
+     * System properties are accessible through <code>getProperty</code>, 
+     * a method defined by the <code>System</code> class. The string value of
+     * this property is then interpreted as an integer value, as per the
+     * <code>Integer.decode</code> method, and an <code>Integer</code> object
+     * representing this value is returned.
      * <p>
-     * The first argument is treated as the name of a system property. 
-     * System properties are accessible through <code>getProperty</code>  
-     * and , a method defined by the <code>System</code> class. The 
-     * string value of this property is then interpreted as an integer 
-     * value and an <code>Integer</code> object representing this value is 
-     * returned. 
-     * <p>
-     * If the property value begins with "<code>0x</code>" or 
-     * "<code>#</code>", not followed by a minus sign, the rest 
-     * of it is parsed as a hexadecimal integer exactly as for the method 
-     * <code>Integer.valueOf</code> with radix 16. 
-     * <p>
-     * If the property value begins with "<code>0</code>" then 
-     * it is parsed as an octal integer exactly as for the method 
-     * <code>Integer.valueOf</code> with radix 8. 
-     * <p>
-     * Otherwise the property value is parsed as a decimal integer 
-     * exactly as for the method <code>Integer.valueOf</code> with radix 10.
-     * <p>
+     * <ul><li>If the property value begins with the two ASCII characters 
+     *         <code>0x</code> or the ASCII character <code>#</code>, not 
+     *      followed by a minus sign, then the rest of it is parsed as a 
+     *      hexadecimal integer exactly as for the method 
+     *      {@link #valueOf(java.lang.String, int)} with radix 16. 
+     * <li>If the property value begins with the ASCII character 
+     *     <code>0</code> followed by another character, it is parsed as an 
+     *     octal integer exactly as for the method 
+     *     {@link #valueOf(java.lang.String, int) with radix 8. 
+     * <li>Otherwise, the property value is parsed as a decimal integer 
+     * exactly as for the method {@link #valueOf(java.lang.String, int)} 
+     * with radix 10. 
+     * </ul><p>
      * The second argument is the default value. If there is no property 
      * of the specified name, or if the property does not have the 
      * correct numeric format, then the second argument is returned. 
@@ -636,41 +745,125 @@ class Integer extends Number {
      * @param   val   default value.
      * @return  the <code>Integer</code> value of the property.
      * @see     java.lang.System#getProperty(java.lang.String)
-     * @see     java.lang.System#getProperty(java.lang.String, java.lang.String)
-     * @since   JDK1.0
+     * @see java.lang.System#getProperty(java.lang.String, java.lang.String)
+     * @see java.lang.Integer#decode
      */
     public static Integer getInteger(String nm, Integer val) {
-	SecurityManager sm = System.getSecurityManager();
-	if (sm != null)
-	    sm.checkPropertyAccess(nm);
 	String v = System.getProperty(nm);
 	if (v != null) {
 	    try {
 		return Integer.decode(v);
 	    } catch (NumberFormatException e) {
 	    }
-	}	
+	}
 	return val;
     }
 
     /**
-     * Decodes a string into an Integer. Deals with decimal, hexadecimal,
-     * and octal numbers.
-     * @param nm the string to decode
-     * @since   JDK1.1
+     * Decodes a <code>String</code> into an <code>Integer</code>.  Accepts
+     * decimal, hexadecimal, and octal numbers, in the following formats:
+     * <pre>
+     *     [-]    <decimal constant>
+     *     [-] 0x     <hex constant>
+     *     [-] #      <hex constant>
+     *     [-] 0    <octal constant>
+     * </pre>
+     *
+     * The constant following an (optional) negative sign and/or "radix
+     * specifier" is parsed as by the <code>Integer.parseInt</code> method
+     * with the specified radix (10, 8 or 16).  This constant must be positive
+     * or a NumberFormatException will result.  The result is made negative if
+     * first character of the specified <code>String</code> is the negative
+     * sign.  No whitespace characters are permitted in the
+     * <code>String</code>.
+     *
+     * @param     nm the <code>String</code> to decode.
+     * @return    the <code>Integer</code> represented by the specified string.
+     * @exception NumberFormatException  if the <code>String</code> does not
+     *            contain a parsable integer.
+     * @see java.lang.Integer#parseInt(String, int)
      */
     public static Integer decode(String nm) throws NumberFormatException {
-	if (nm.startsWith("0x")) {
-	    return Integer.valueOf(nm.substring(2), 16);
+        int radix = 10;
+        int index = 0;
+        boolean negative = false;
+        Integer result;
+
+        // Handle minus sign, if present
+        if (nm.startsWith("-")) {
+            negative = true;
+            index++;
+        }
+
+        // Handle radix specifier, if present
+	if (nm.startsWith("0x", index) || nm.startsWith("0X", index)) {
+	    index += 2;
+            radix = 16;
 	}
-	if (nm.startsWith("#")) {
-	    return Integer.valueOf(nm.substring(1), 16);
+	else if (nm.startsWith("#", index)) {
+	    index ++;
+            radix = 16;
 	}
-	if (nm.startsWith("0") && nm.length() > 1) {
-	    return Integer.valueOf(nm.substring(1), 8);
+	else if (nm.startsWith("0", index) && nm.length() > 1 + index) {
+	    index ++;
+            radix = 8;
 	}
-	
-	return Integer.valueOf(nm);
+
+        if (nm.startsWith("-", index))
+            throw new NumberFormatException("Negative sign in wrong position");
+
+        try {
+            result = Integer.valueOf(nm.substring(index), radix);
+            result = negative ? new Integer(-result.intValue()) : result;
+        } catch (NumberFormatException e) {
+            // If number is Integer.MIN_VALUE, we'll end up here. The next line
+            // handles this case, and causes any genuine format error to be
+            // rethrown.
+            String constant = negative ? new String("-" + nm.substring(index))
+                                       : nm.substring(index);
+            result = Integer.valueOf(constant, radix);
+        }
+        return result;
+    }
+
+    /**
+     * Compares two Integers numerically.
+     *
+     * @param   anotherInteger   the <code>Integer</code> to be compared.
+     * @return  the value <code>0</code> if the argument Integer is equal to
+     *          this Integer; a value less than <code>0</code> if this Integer
+     *          is numerically less than the Integer argument; and a
+     *          value greater than <code>0</code> if this Integer is
+     *          numerically greater than the Integer argument
+     *		(signed comparison).
+     * @since   JDK1.2
+     */
+    public int compareTo(Integer anotherInteger) {
+	int thisVal = this.value;
+	int anotherVal = anotherInteger.value;
+	return (thisVal<anotherVal ? -1 : (thisVal==anotherVal ? 0 : 1));
+    }
+
+    /**
+     * Compares this Integer to another Object.  If the Object is a Integer,
+     * this function behaves like <code>compareTo(Integer)</code>.  Otherwise,
+     * it throws a <code>ClassCastException</code> (as Integers are comparable
+     * only to other Integers).
+     *
+     * @param   o the <code>Object</code> to be compared.
+     * @return  the value <code>0</code> if the argument is a Integer
+     *		numerically equal to this Integer; a value less than
+     *		<code>0</code> if the argument is a Integer numerically
+     *		greater than this Integer; and a value greater than
+     *		<code>0</code> if the argument is a Integer numerically
+     *		less than this Integer.
+     * @exception <code>ClassCastException</code> if the argument is not an
+     *		  <code>Integer</code>.
+     * @see     java.lang.Comparable
+     * @since   JDK1.2
+     */
+    public int compareTo(Object o) {
+	return compareTo((Integer)o);
     }
 
     /** use serialVersionUID from JDK 1.0.2 for interoperability */
